<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyContact</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="app_id">315257261919737</string>
    <string name="settings">Settings</string>
    <string name="ar_button">Start Recognition</string>
    <string name="btn_makebackup">Backup Contacts</string>
    <string name="create_easycontact_account">Sign Up for EasyContact</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="signup_fullname_label">Full Name:</string>
    <string name="signup_email_label">Email</string>
    <string name="signup_password_label">Password</string>
    <string name="already_have_account">Already has account! Login here</string>
    <string name="easycontact_login">EasyContact Login</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="sync_facebook">Sync Images from Facebook</string>

</resources>