<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff" >

        <!-- Header  Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >
        </LinearLayout>
        <!-- Header Ends -->
        <!-- Footer Start -->
        <!-- <LinearLayout android:id="@+id/footer" -->
        <!-- android:layout_width="fill_parent" -->
        <!-- android:layout_height="90dip" -->
        <!-- android:background="@layout/footer_repeat" -->
        <!-- android:layout_alignParentBottom="true"> -->
        <!-- </LinearLayout> -->
        <!-- Footer Ends -->


        <!-- Registration Form -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Full Name Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_fullname_label"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/signup_fullname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="text"
                android:singleLine="true" />
            <!-- Email Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_email_label"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
            <!-- Username Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/signup_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="none"
                android:singleLine="true" />
            <!-- Password Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_password_label"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:singleLine="true" />
            <!-- Register Button -->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/create_easycontact_account" />
            <!-- Link to Login Screen -->

            <TextView
                android:id="@+id/link_to_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dip"
                android:layout_marginTop="40dip"
                android:gravity="center"
                android:text="@string/already_have_account"
                android:textColor="#025f7c"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/error_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dip"
                android:layout_marginTop="40dip"
                android:gravity="center"
                android:text=""
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- Registration Form Ends -->
    </RelativeLayout>

</ScrollView>