<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#303040"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingTop="20dip"
        android:text="@string/username"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/username_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:textColor="@android:color/white" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:text="@string/signup_password_label"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/password_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/holo_red_light" />
    
     <Button
         android:id="@+id/easycontact_login"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="30dp"
         android:layout_marginTop="30dp"
         android:background="#3b5999"
         android:gravity="center_horizontal"
         android:text="@string/login"
         android:textColor="@android:color/white" />
     

</LinearLayout>